added accent picker

--- a/TextToSpeech/Base.lproj/Main.storyboard
+++ b/TextToSpeech/Base.lproj/Main.storyboard
@@ -19,6 +19,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2x4-b6-xba">
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kHe-zH-yGq">
+                                <frame key="frameInset" minY="298" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                            </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xob-X3-t84">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <state key="normal" title="Tap for Speech!">
@@ -28,24 +38,20 @@
                                     <action selector="speak:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g1Z-y0-boG"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2x4-b6-xba">
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="xob-X3-t84" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="346" id="1ds-7d-1Ro"/>
-                            <constraint firstItem="xob-X3-t84" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="71" id="OJA-at-pc5"/>
+                            <constraint firstItem="xob-X3-t84" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="531" id="1ds-7d-1Ro"/>
+                            <constraint firstItem="xob-X3-t84" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="81" id="OJA-at-pc5"/>
                             <constraint firstItem="2x4-b6-xba" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="215" id="idB-DE-XAJ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="xob-X3-t84" secondAttribute="trailing" constant="72" id="mzb-MF-OdD"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xob-X3-t84" secondAttribute="bottom" constant="215" id="s3O-fa-nNs"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xob-X3-t84" secondAttribute="trailing" constant="62" id="mzb-MF-OdD"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xob-X3-t84" secondAttribute="bottom" constant="70" id="s3O-fa-nNs"/>
                             <constraint firstItem="2x4-b6-xba" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="25" id="yLX-T7-D8k"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2x4-b6-xba" secondAttribute="trailing" constant="26" id="z1c-mk-juk"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="accentPickerView" destination="kHe-zH-yGq" id="z0I-au-e1l"/>
                         <outlet property="speechTextBar" destination="2x4-b6-xba" id="Af4-3z-zq0"/>
                     </connections>
                 </viewController>
